fix: issue with SVG render on Firefox

--- a/public/assets/map.css
+++ b/public/assets/map.css
@@ -5,6 +5,8 @@
 }
 
 #status-map {
+	height: 100vh;
+	width: 100vw;
 	opacity: 0;
 	transition: opacity 1s ease;
 }
